# thengine

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README  README.md
emberborn/: CMakeLists.txt
emberborn/assets/: test.xcf
emberborn/assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
emberborn/src/: EmberbornGame.cpp  EmberbornGame.h  main.cpp
emberborn/src/core/: Constants.h  LevelGenerator.cpp  LevelGenerator.h  Tile.cpp  Tile.h  TileMap.cpp  TileMap.h
emberborn/src/entity/: Entity.cpp  Entity.h  EntityAI.h  EntityController.cpp  EntityController.h  EntityRenderer.cpp  EntityRenderer.h  EntityType.h  GenericNeutralEntityAI.cpp  GenericNeutralEntityAI.h  MonsterController.cpp  MonsterController.h  PlayerController.cpp  PlayerController.h  PlayerEntity.cpp  PlayerEntity.h
emberborn/src/graphics/: TileRenderer.cpp  TileRenderer.h
engine/: CMakeLists.txt
engine/assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
engine/doc/: Architecture.md
engine/include/thengine/: ContentManager.h  DebugLogger.h  Entity.h  FpsCounter.h  Game.h  Input.h  Renderer.h
engine/include/thengine/graphics/: BasicEffect.h  LightTypes.h  Shader.h  Sprite.h  SpriteBatch.h  SpriteEffect.h  SpriteFont.h  Texture.h  Vertex.h
engine/include/thengine/math/: Math.h  Matrix4.h
engine/include/thengine/primitives/: Color.h  Rectangle.h  Vector2.h
engine/include/thengine/view/: Camera2D.h  IObstacleProvider.h  LightSource.h  VisibilitySolver.h  VisibilityTypes.h
engine/src/core/: ContentManager.cpp  Entity.cpp  FpsCounter.cpp  Game.cpp
engine/src/graphics/: BasicEffect.cpp  BasicShaders.h  Renderer.cpp  Shader.cpp  Sprite.cpp  SpriteBatch.cpp  SpriteEffect.cpp  SpriteFont.cpp  Texture.cpp
engine/src/input/: Input.cpp
engine/src/view/: VisibilitySolver.cpp
sandbox/: CMakeLists.txt
sandbox/assets/shaders/: basic.frag  basic.frag.spv  basic.vert  basic.vert.spv
sandbox/src/: SandboxGame.cpp  SandboxGame.h  main.cpp
